# BrainTopologyLLM

./: .gitignore  README.md  THEOREM.md  diagnostic.py  mnist_ricci_pipeline.py  pyproject.toml  requirements.txt  results_final_16.json  results_hash.txt  results_hash.txt.ots
.github/workflows/: ci.yml
experiments/: __init__.py  divine_spark_experiment.py  divine_spark_v2.py  final_16_experiments.py  live_surgery_experiment.py  neural_seed_cifar_poc.py  neural_seed_distributed_poc.py  neural_seed_llm_poc.py  neural_seed_llm_stress_test.py  neural_seed_poc.py  noise_sweep_divine_spark.py  path1_llm_topological_alignment.py  path_b_topological_regularization.py  run_attractor_test.py  topok8s_orchestration.py
experiments/broken_resnet/: .gitignore  __init__.py  checkpoint.py  factory.py  requirements.txt  ricci_metrics.py  run_experiments.py  surgery.py  trainer.py
experiments/commercial_poc/: json_surgery_poc.py
experiments/eliza_threshold/: attractor_analyzer.py  checkpoint_manager.py  classic_eliza.py  (+6 more)
models/: __init__.py  ricci_metrics.py
results/: A_legkaya_travma_skip07_results.json  B_sredniy_perelom_skip05_results.json  C_klinicheskaya_smert_skip03_results.json  resnet_archetype_surgery.pt  xor_threshold_results.csv
src/: __init__.py  checkpoint_manager.py  compare_pruning.py  landscape.py  mnist_ricci_pipeline.py  perelman_surgery.py  resnet_archetype_surgery.py  resnet_ricci_pruning.py  train_cifar_resnet.py
surgery/: __init__.py  attention_surgery.py
tests/: test_core.py
train/: __init__.py  checkpoint_manager.py  trainer.py  trickster.py
(+14 files in other folders)
